# trifinger_example

./: .gitignore  README.md  goal.json  package.xml  roboch.json  run  setup.cfg  setup.py
apptainer/: workshop_image.def
scripts/: submit_and_download.sh  trifinger_platform_log_viewer_V2.py
trifinger_example/: robot.py  utils.py
trifinger_example/scripts/: run_robot.py
